Added some new stuff

--- a/css/material.css
+++ b/css/material.css
@@ -26,8 +26,8 @@
   --primary: #9c27b0;
   --primary-dark: #7b1fa2;
   --primary-light: #e1bee7;
-  --secondary: #ff4081;
-  --secondary-dark: #f50057;
+  --secondary: #3498db;
+  --secondary-dark: #2980b9;
   --secondary-light: #ff80ab;
   --danger: #f44336;
   --danger-dark: #d32f2f;
